--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Rita SMS Survey Platform - Environment Configuration
 
 # Server Configuration
-PORT=8080
+PORT=3001
 NODE_ENV=development
 
 # Database Configuration (Choose one)
 # MongoDB
-MONGODB_URI=mongodb://localhost:27017/rita-sms-platform
+MONGODB_URI=mongodb://localhost:27017/rita
 # PostgreSQL (alternative)
 # DATABASE_URL=postgresql://username:password@localhost:5432/rita
 
@@ -20,7 +20,7 @@ JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random
 JWT_EXPIRES_IN=7d
 
 # Application Settings
-APP_URL=http://localhost:8080
+APP_URL=http://localhost:3001
 FRONTEND_URL=http://localhost:3000
 
 # Business Configuration (Puppies N Love)
@@ -35,7 +35,7 @@ DEFAULT_REMINDER_DELAY=60
 MAX_REMINDERS=1
 
 # File Upload Configuration
-MAX_FILE_SIZE=10MB
+MAX_FILE_SIZE=100MB
 UPLOAD_DIR=uploads/
 
 # Email Configuration (optional - for notifications)
